# urbtec_utility_labelling

./: .env  .gitignore  AGENTS.md  README.md  __🏠_Home.py  env_settings.py  pyproject.toml  schema.sql
.github/ISSUE_TEMPLATE/: mem-spec.md
.mem/: config.toml  user_mappings.toml
.mem/logs/: benjamin_van_heerden_20260122_153524_session.md  benjamin_van_heerden_20260126_120139_session.md  benjamin_van_heerden_20260127_103036_session.md  benjamin_van_heerden_20260205_143550_session.md  benjamin_van_heerden_20260212_152715_session.md  benjamin_van_heerden_20260226_122609_session.md  benjamin_van_heerden_20260226_140810_session.md  benjamin_van_heerden_20260305_104713_session.md
.mem/todos/: multiple_users_logged_in_at_same_time.md
.mem/todos/claimed/: multiple_users_logged_in_at_same_time.md
components/streamlit_drawable_canvas/: __init__.py
pages/: 1_🏷️_Meter_Labelling.py
scripts/: export_model.sh  fetch_annotations.sh  find_unclassified.py  fine_tune_yolo_obb.py  prepare_dataset.py  visualize_predictions.py
scripts/random/: meter_info_by_client.py
services/: urbion-ai-utility-labelling.service
utils/: auth.py  database.py  file_lock.py  obb.py  session_state.py
utils/models/: annotation.py  session_state.py
